[gd_scene load_steps=2 format=3 uid="uid://c7atjd0hjlng3"]

[ext_resource type="Script" path="res://multiplayer_template/menu/debug_menu/debug_sub_menus/default_debug_sub_menu.gd" id="1_0o5f1"]

[node name="DefaultDebugSubMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0o5f1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="OpenServer" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Open Server"

[node name="OpenClient" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Open Client"

[node name="OpenP2PHost" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Open Peer to Peer Host"

[node name="Test" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "Test"

[connection signal="pressed" from="VBoxContainer/OpenServer" to="." method="_on_open_server_pressed"]
[connection signal="pressed" from="VBoxContainer/OpenClient" to="." method="_on_open_client_pressed"]
[connection signal="pressed" from="VBoxContainer/OpenP2PHost" to="." method="_on_open_p_2p_host_pressed"]
[connection signal="pressed" from="VBoxContainer/Test" to="." method="_on_test_pressed"]
